--- a/html/forget_pw.html
+++ b/html/forget_pw.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Forget Password</title>
+  <title>GadgetRx</title>
   <link rel="shortcut icon" type="image/png" href="../assets/images/logos/favicon.png" />
   <link rel="stylesheet" href="../assets/css/styles.min.css" />
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDx78wjiGh46Ei1oL-9b8M1-5zogF1VXs&&libraries=places"></script>
