--- a/html/signup_user.html
+++ b/html/signup_user.html
@@ -30,7 +30,6 @@
                 <a href="./index.html" class="text-nowrap logo-img text-center d-block py-3 w-100">
                   <img src="../assets/images/logos/logo.svg" alt="">
                 </a>
-                <p class="text-center">Your Social Campaigns</p>
                 <form id="signupForm">
                   <div class="mb-3">
                       <label for="name" class="form-label">Name</label>
@@ -74,7 +73,7 @@
                         <input type="text" class="form-control" id="otp" name="otp">
                       </div>
                       <div class="col-md-4">
-                        <button type="button" class="btn btn-primary w-100 py-2 fs-4 mb-4 rounded-2" id="sendOTPBtn" onclick="sendOTP_user()">Send OTP</button>
+                        <button type="button" class="btn btn-primary w-100 py-2 fs-4 mb-4 rounded-2" id="sendOTPBtn" onclick="sendOTP_user_signup()">Send OTP</button>
                       </div>
                     </div>
                     
@@ -97,6 +96,7 @@
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
+  <script src="../assets/script/script.js"></script>
   <script>
     let map;
 
