--- a/signup_shop.html
+++ b/signup_shop.html
@@ -33,11 +33,15 @@
                 </a>
                 <form id="signupForm">
                   <div class="mb-3">
-                    <label for="owner_email" class="form-label">Owner Email</label>
-                    <input type="email" class="form-control" id="owner_email" name="owner_email"
+                    <label for="owner_username" class="form-label">Owner User Name</label>
+                    <input type="email" class="form-control" id="owner_username" name="owner_username"
                       aria-describedby="emailHelp">
                     <small id="emailHelp" class="form-text text-muted">Need to create user account Before creating
                       shop.</small>
+                  </div>
+                  <div class="mb-3">
+                    <label for="shop_name" class="form-label">Shop User Name</label>
+                    <input type="text" class="form-control" id="shop_name" name="shop_name">
                   </div>
                   <div class="mb-3">
                     <label for="name" class="form-label">Shop Name</label>
