--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GadgetRx</title>
-  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/favicon.png" />
-  <link rel="stylesheet" href="../assets/css/styles.min.css" />
+  <link rel="shortcut icon" type="image/png" href="assets/images/logos/favicon.png" />
+  <link rel="stylesheet" href="assets/css/styles.min.css" />
 </head>
 
 <body>
@@ -18,8 +18,8 @@
       <!-- Sidebar scroll-->
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
-          <a href="./index.html" class="text-nowrap logo-img">
-            <img src="../assets/images/logos/logo.svg" alt="" />
+          <a href="index.html" class="text-nowrap logo-img">
+            <img src="assets/images/logos/logo.svg" alt="" />
           </a>
           <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
             <i class="ti ti-x fs-8"></i>
@@ -121,7 +121,7 @@
               <a href="https://adminmart.com/product/matdash-bootstrap-5-admin-dashboard-template/" target="_blank" class="btn btn-primary fs-2 fw-semibold lh-sm">Buy Pro</a>
             </div>
             <div class="unlimited-access-img">
-              <img src="../assets/images/backgrounds/rupee.png" alt="" class="img-fluid">
+              <img src="assets/images/backgrounds/rupee.png" alt="" class="img-fluid">
             </div>
           </div>
         </nav>
@@ -154,7 +154,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link " href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  <img src="../assets/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
+                  <img src="assets/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
                 </a>
                 <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
                   <div class="message-body">
@@ -271,7 +271,7 @@
                         <tr>
                           <td class="ps-0">
                             <div class="d-flex align-items-center gap-6">
-                              <img src="../assets/images/products/dash-prd-1.jpg" alt="prd1" width="48"
+                              <img src="assets/images/products/dash-prd-1.jpg" alt="prd1" width="48"
                                 class="rounded" />
                               <div>
                                 <h6 class="mb-0">Minecraf App</h6>
@@ -292,7 +292,7 @@
                         <tr>
                           <td class="ps-0">
                             <div class="d-flex align-items-center gap-6">
-                              <img src="../assets/images/products/dash-prd-2.jpg" alt="prd1" width="48"
+                              <img src="assets/images/products/dash-prd-2.jpg" alt="prd1" width="48"
                                 class="rounded" />
                               <div>
                                 <h6 class="mb-0">Web App Project</h6>
@@ -313,7 +313,7 @@
                         <tr>
                           <td class="ps-0">
                             <div class="d-flex align-items-center gap-6">
-                              <img src="../assets/images/products/dash-prd-3.jpg" alt="prd1" width="48"
+                              <img src="assets/images/products/dash-prd-3.jpg" alt="prd1" width="48"
                                 class="rounded" />
                               <div>
                                 <h6 class="mb-0">Modernize Dashboard</h6>
@@ -335,7 +335,7 @@
                         <tr>
                           <td class="ps-0">
                             <div class="d-flex align-items-center gap-6">
-                              <img src="../assets/images/products/dash-prd-4.jpg" alt="prd1" width="48"
+                              <img src="assets/images/products/dash-prd-4.jpg" alt="prd1" width="48"
                                 class="rounded" />
                               <div>
                                 <h6 class="mb-0">Dashboard Co</h6>
@@ -437,12 +437,12 @@
               <div class="card overflow-hidden hover-img">
                 <div class="position-relative">
                   <a href="javascript:void(0)">
-                    <img src="../assets/images/blog/blog-img1.jpg" class="card-img-top" alt="matdash-img">
+                    <img src="assets/images/blog/blog-img1.jpg" class="card-img-top" alt="matdash-img">
                   </a>
                   <span
                     class="badge text-bg-light text-dark fs-2 lh-sm mb-9 me-9 py-1 px-2 fw-semibold position-absolute bottom-0 end-0">2
                     min Read</span>
-                  <img src="../assets/images/profile/user-3.jpg" alt="matdash-img"
+                  <img src="assets/images/profile/user-3.jpg" alt="matdash-img"
                     class="img-fluid rounded-circle position-absolute bottom-0 start-0 mb-n9 ms-9" width="40"
                     height="40" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Georgeanna Ramero">
                 </div>
@@ -469,12 +469,12 @@
               <div class="card overflow-hidden hover-img">
                 <div class="position-relative">
                   <a href="javascript:void(0)">
-                    <img src="../assets/images/blog/blog-img2.jpg" class="card-img-top" alt="matdash-img">
+                    <img src="assets/images/blog/blog-img2.jpg" class="card-img-top" alt="matdash-img">
                   </a>
                   <span
                     class="badge text-bg-light text-dark fs-2 lh-sm mb-9 me-9 py-1 px-2 fw-semibold position-absolute bottom-0 end-0">2
                     min Read</span>
-                  <img src="../assets/images/profile/user-2.jpg" alt="matdash-img"
+                  <img src="assets/images/profile/user-2.jpg" alt="matdash-img"
                     class="img-fluid rounded-circle position-absolute bottom-0 start-0 mb-n9 ms-9" width="40"
                     height="40" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Georgeanna Ramero">
                 </div>
@@ -501,12 +501,12 @@
               <div class="card overflow-hidden hover-img">
                 <div class="position-relative">
                   <a href="javascript:void(0)">
-                    <img src="../assets/images/blog/blog-img3.jpg" class="card-img-top" alt="matdash-img">
+                    <img src="assets/images/blog/blog-img3.jpg" class="card-img-top" alt="matdash-img">
                   </a>
                   <span
                     class="badge text-bg-light text-dark fs-2 lh-sm mb-9 me-9 py-1 px-2 fw-semibold position-absolute bottom-0 end-0">2
                     min Read</span>
-                  <img src="../assets/images/profile/user-3.jpg" alt="matdash-img"
+                  <img src="assets/images/profile/user-3.jpg" alt="matdash-img"
                     class="img-fluid rounded-circle position-absolute bottom-0 start-0 mb-n9 ms-9" width="40"
                     height="40" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Georgeanna Ramero">
                 </div>
@@ -538,13 +538,13 @@
       </div>
     </div>
   </div>
-  <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
-  <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/sidebarmenu.js"></script>
-  <script src="../assets/js/app.min.js"></script>
-  <script src="../assets/libs/apexcharts/dist/apexcharts.min.js"></script>
-  <script src="../assets/libs/simplebar/dist/simplebar.js"></script>
-  <script src="../assets/js/dashboard.js"></script>
+  <script src="assets/libs/jquery/dist/jquery.min.js"></script>
+  <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/sidebarmenu.js"></script>
+  <script src="assets/js/app.min.js"></script>
+  <script src="assets/libs/apexcharts/dist/apexcharts.min.js"></script>
+  <script src="assets/libs/simplebar/dist/simplebar.js"></script>
+  <script src="assets/js/dashboard.js"></script>
   <!-- solar icons -->
   <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 </body>
