--- a/signup_tech.html
+++ b/signup_tech.html
@@ -7,6 +7,7 @@
   <title>GadgetRx</title>
   <link rel="shortcut icon" type="image/png" href="../assets/images/logos/favicon.png" />
   <link rel="stylesheet" href="../assets/css/styles.min.css" />
+  <script src="assets/script/script.js"></script>
   
 </head>
 
@@ -26,23 +27,21 @@
                 </a>
                 <form id="signupForm">
                   <div class="mb-3">
-                    <label for="shop_email" class="form-label">Shop Email address</label>
-                    <input type="email" class="form-control" id="shop_email" name="shop_email" aria-describedby="emailHelp">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                      else.</small>
+                    <label for="shop_username" class="form-label">Shop User Name</label>
+                    <input type="text" class="form-control" id="shop_username" name="shop_username" aria-describedby="emailHelp">
+
                   </div>
                   <div class="mb-3">
-                    <label for="tech_email" class="form-label">Technician Email address</label>
-                    <input type="email" class="form-control" id="tech_email" name="tech_email" aria-describedby="emailHelp">
-                    <small id="emailHelp" class="form-text text-muted">Need to create user account Before creating add
-                      technician.</small>
+                    <label for="tech_username" class="form-label">Technician User Name</label>
+                    <input type="text" class="form-control" id="tech_username" name="tech_username" aria-describedby="emailHelp">
+                   
                   </div>
                   <div class="mb-3">
-                    <label for="tech_des" class="form-label">Simple Description</label>
+                    <label for="tech_des" class="form-label">Simple Description/ Qulification</label>
                     <input type="text" class="form-control" id="tech_des" name="tech_des">
                   </div>
                   <div class="mb-3">
-                    <label for="shop_type" class="form-label">Qulification</label>
+                    <label for="shop_type" class="form-label">Position</label>
                     <input type="text" class="form-control" id="shop_type" name="shop_type">
                   </div>
                   <button type="submit" class="btn btn-primary btn-block" onclick="signup_technician()">Sign Up</button>
@@ -57,25 +56,7 @@
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
-  <script>
-    let map;
-    let geocoder;
 
-    function initMap() {
-      geocoder = new google.maps.Geocoder();
-      map = new google.maps.Map(document.getElementById('map'), {
-        center: {lat: -34.397, lng: 150.644},
-        zoom: 15
-      });
-
-      // Add event listener to update latitude and longitude input when map is clicked
-      map.addListener('click', function(event) {
-        document.getElementById('latitude').value = event.latLng.lat();
-        document.getElementById('longitude').value = event.latLng.lng();
-      });
-    }
-    initMap();
-  </script>
 </body>
 
 </html>
