--- a/test.html
+++ b/test.html
@@ -116,13 +116,13 @@
                         <option value="17:00">5:00 PM</option>
                       </select>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group mb-3">
                       <label for="description">Description:</label>
                       <input type="text" id="description" class="form-control" required />
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" hidden>
                       <label for="shop_name">Shop ID:</label>
-                      <input type="text" id="shop_name" class="form-control" required />
+                      <input type="text" id="shop_name" class="form-control" required/>
                     </div>
                     <button type="submit" class="btn btn-primary">Book Appointment</button>
                   </form>
