--- a/a_tech.html
+++ b/a_tech.html
@@ -27,19 +27,36 @@
           <input type="text" class="form-control" id="shop_username" required />
         </div>
         <div class="mb-3">
-          <label for="tech_username" class="form-label">Technician Username</label>
+          <label for="tech_username" class="form-label"
+            >Technician Username</label
+          >
           <input type="text" class="form-control" id="tech_username" required />
         </div>
         <div class="mb-3">
-          <label for="tech_des" class="form-label">Technician Description</label>
+          <label for="tech_des" class="form-label"
+            >Technician Description</label
+          >
           <input type="text" class="form-control" id="tech_des" />
         </div>
         <div class="mb-3">
-          <label for="tech_qul" class="form-label">Technician Qualification</label>
+          <label for="tech_qul" class="form-label"
+            >Technician Qualification</label
+          >
           <input type="text" class="form-control" id="tech_qul" required />
         </div>
         <button type="submit" class="btn btn-primary">Add Technician</button>
       </form>
+
+      <!-- Add Search Input -->
+      <div class="mb-4">
+        <input
+          type="text"
+          id="searchTechnician"
+          class="form-control"
+          placeholder="Search technicians by username or shop..."
+          oninput="searchTechnicians()"
+        />
+      </div>
 
       <!-- Technicians Table -->
       <div class="technicians-table-container">
@@ -61,32 +78,70 @@
     </div>
 
     <!-- Edit Technician Modal -->
-    <div class="modal fade" id="editTechnicianModal" tabindex="-1" aria-labelledby="editTechnicianModalLabel" aria-hidden="true">
+    <div
+      class="modal fade"
+      id="editTechnicianModal"
+      tabindex="-1"
+      aria-labelledby="editTechnicianModalLabel"
+      aria-hidden="true"
+    >
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="editTechnicianModalLabel">Edit Technician</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h5 class="modal-title" id="editTechnicianModalLabel">
+              Edit Technician
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body">
             <form id="editTechnicianForm">
               <div class="mb-3">
-                <label for="edit_shop_username" class="form-label">Shop Username</label>
-                <input type="text" class="form-control" id="edit_shop_username" readonly />
+                <label for="edit_shop_username" class="form-label"
+                  >Shop Username</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="edit_shop_username"
+                  readonly
+                />
               </div>
               <div class="mb-3">
-                <label for="edit_tech_username" class="form-label">Technician Username</label>
-                <input type="text" class="form-control" id="edit_tech_username" readonly />
+                <label for="edit_tech_username" class="form-label"
+                  >Technician Username</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="edit_tech_username"
+                  readonly
+                />
               </div>
               <div class="mb-3">
-                <label for="edit_tech_des" class="form-label">Technician Description</label>
+                <label for="edit_tech_des" class="form-label"
+                  >Technician Description</label
+                >
                 <input type="text" class="form-control" id="edit_tech_des" />
               </div>
               <div class="mb-3">
-                <label for="edit_tech_qul" class="form-label">Technician Qualification</label>
-                <input type="text" class="form-control" id="edit_tech_qul" required />
+                <label for="edit_tech_qul" class="form-label"
+                  >Technician Qualification</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="edit_tech_qul"
+                  required
+                />
               </div>
-              <button type="submit" class="btn btn-primary">Save Changes</button>
+              <button type="submit" class="btn btn-primary">
+                Save Changes
+              </button>
             </form>
           </div>
         </div>
@@ -113,8 +168,12 @@
           });
       });
 
-      function loadTechnicians() {
-        fetch("http://localhost:3000/admin/technicians")
+      function loadTechnicians(searchQuery = "") {
+        fetch(
+          `http://localhost:3000/admin/technicians?search=${encodeURIComponent(
+            searchQuery
+          )}`
+        )
           .then((response) => response.json())
           .then((data) => {
             const techniciansTable = document
@@ -124,17 +183,25 @@
             data.forEach((technician) => {
               const row = techniciansTable.insertRow();
               row.innerHTML = `
-                <td>${technician.shop_username}</td>
-                <td>${technician.tech_username}</td>
-                <td>${technician.tech_des}</td>
-                <td>${technician.tech_qul}</td>
-                <td>
-                  <button class="btn btn-warning btn-sm" onclick="editTechnician('${technician.shop_username}', '${technician.tech_username}', '${technician.tech_des}', '${technician.tech_qul}')">Edit</button>
-                  <button class="btn btn-danger btn-sm" onclick="deleteTechnician('${technician.tech_username}')">Delete</button>
-                </td>
-              `;
+          <td>${technician.shop_username}</td>
+          <td>${technician.tech_username}</td>
+          <td>${technician.tech_des}</td>
+          <td>${technician.tech_qul}</td>
+          <td>
+            <button class="btn btn-warning btn-sm" onclick="editTechnician('${technician.shop_username}', '${technician.tech_username}', '${technician.tech_des}', '${technician.tech_qul}')">Edit</button>
+            <button class="btn btn-danger btn-sm" onclick="deleteTechnician('${technician.tech_username}')">Delete</button>
+          </td>
+        `;
             });
+          })
+          .catch((error) => {
+            console.error("Error loading technicians:", error);
           });
+      }
+
+      function searchTechnicians() {
+        const searchQuery = document.getElementById("searchTechnician").value;
+        loadTechnicians(searchQuery);
       }
 
       function addTechnician() {
@@ -159,10 +226,18 @@
             } else {
               alert("Failed to add technician");
             }
+          })
+          .catch((error) => {
+            console.error("Error adding technician:", error);
           });
       }
 
-      function editTechnician(shop_username, tech_username, tech_des, tech_qul) {
+      function editTechnician(
+        shop_username,
+        tech_username,
+        tech_des,
+        tech_qul
+      ) {
         document.getElementById("edit_shop_username").value = shop_username;
         document.getElementById("edit_tech_username").value = tech_username;
         document.getElementById("edit_tech_des").value = tech_des;
@@ -174,13 +249,17 @@
       }
 
       function saveTechnician() {
-        const shop_username = document.getElementById("edit_shop_username").value;
-        const tech_username = document.getElementById("edit_tech_username").value;
+        const shop_username =
+          document.getElementById("edit_shop_username").value;
+        const tech_username =
+          document.getElementById("edit_tech_username").value;
         const tech_des = document.getElementById("edit_tech_des").value;
         const tech_qul = document.getElementById("edit_tech_qul").value;
 
         fetch(
-          `http://localhost:3000/admin/technicians/${encodeURIComponent(tech_username)}`,
+          `http://localhost:3000/admin/technicians/${encodeURIComponent(
+            tech_username
+          )}`,
           {
             method: "PUT",
             headers: {
@@ -196,23 +275,36 @@
             } else {
               alert("Failed to update technician");
             }
+          })
+          .catch((error) => {
+            console.error("Error updating technician:", error);
           });
       }
 
       function deleteTechnician(tech_username) {
-        if (confirm(`Are you sure you want to delete technician ${tech_username}?`)) {
-          fetch(`http://localhost:3000/admin/technicians/${tech_username}`, {
-            method: "DELETE",
-          })
-            .then((response) => response.json())
-            .then((data) => {
-              if (data.success) {
-                loadTechnicians();
-              } else {
-                alert("Failed to delete technician");
-              }
-            });
+        if (!confirm("Are you sure you want to delete this technician?")) {
+          return;
         }
+
+        fetch(
+          `http://localhost:3000/admin/technicians/${encodeURIComponent(
+            tech_username
+          )}`,
+          {
+            method: "DELETE",
+          }
+        )
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.success) {
+              loadTechnicians();
+            } else {
+              alert("Failed to delete technician");
+            }
+          })
+          .catch((error) => {
+            console.error("Error deleting technician:", error);
+          });
       }
     </script>
   </body>
