--- a/a_user.html
+++ b/a_user.html
@@ -22,6 +22,7 @@
 
         <!-- Add/Edit User Form -->
         <form id="userForm" class="mb-4">
+            <!-- Existing form fields -->
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" required />
@@ -50,9 +51,23 @@
                 <label for="profilePic" class="form-label">Profile Picture URL</label>
                 <input type="text" class="form-control" id="profilePic" required />
             </div>
+            <div class="mb-3">
+                <label for="type" class="form-label">Type</label>
+                <input type="text" class="form-control" id="type" required />
+            </div>
             <input type="hidden" id="editUsername" />
             <button type="submit" class="btn btn-primary">Add User</button>
         </form>
+
+        <!-- Search Input -->
+        <div class="mb-4">
+            <input
+                type="text"
+                class="form-control"
+                id="searchInput"
+                placeholder="Search users..."
+            />
+        </div>
 
         <!-- Users Table -->
         <div class="users-table-container">
@@ -77,50 +92,50 @@
         </div>
 
         <!-- Edit User Modal -->
-<div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="editUserModalLabel">Edit User</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="editUserForm">
-                    <div class="mb-3">
-                        <label for="edit_name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="edit_name" required />
+        <div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="editUserModalLabel">Edit User</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="mb-3">
-                        <label for="edit_email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="edit_email" required />
+                    <div class="modal-body">
+                        <form id="editUserForm">
+                            <div class="mb-3">
+                                <label for="edit_name" class="form-label">Name</label>
+                                <input type="text" class="form-control" id="edit_name" required />
+                            </div>
+                            <div class="mb-3">
+                                <label for="edit_email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="edit_email" required />
+                            </div>
+                            <div class="mb-3">
+                                <label for="edit_contactnum" class="form-label">Contact Number</label>
+                                <input type="text" class="form-control" id="edit_contactnum" required />
+                            </div>
+                            <div class="mb-3">
+                                <label for="edit_latitude" class="form-label">Latitude</label>
+                                <input type="number" step="0.000001" class="form-control" id="edit_latitude" required />
+                            </div>
+                            <div class="mb-3">
+                                <label for="edit_longitude" class="form-label">Longitude</label>
+                                <input type="number" step="0.000001" class="form-control" id="edit_longitude" required />
+                            </div>
+                            <div class="mb-3">
+                                <label for="edit_profilePic" class="form-label">Profile Picture URL</label>
+                                <input type="text" class="form-control" id="edit_profilePic" required />
+                            </div>
+                            <div class="mb-3">
+                                <label for="edit_type" class="form-label">Type</label>
+                                <input type="text" class="form-control" id="edit_type" required />
+                            </div>
+                            <input type="hidden" id="edit_user_id" />
+                            <button type="submit" class="btn btn-primary">Save Changes</button>
+                        </form>
                     </div>
-                    <div class="mb-3">
-                        <label for="edit_contactnum" class="form-label">Contact Number</label>
-                        <input type="text" class="form-control" id="edit_contactnum" required />
-                    </div>
-                    <div class="mb-3">
-                        <label for="edit_latitude" class="form-label">Latitude</label>
-                        <input type="number" step="0.000001" class="form-control" id="edit_latitude" required />
-                    </div>
-                    <div class="mb-3">
-                        <label for="edit_longitude" class="form-label">Longitude</label>
-                        <input type="number" step="0.000001" class="form-control" id="edit_longitude" required />
-                    </div>
-                    <div class="mb-3">
-                        <label for="edit_profilePic" class="form-label">Profile Picture URL</label>
-                        <input type="text" class="form-control" id="edit_profilePic" required />
-                    </div>
-                    <div class="mb-3">
-                        <label for="edit_type" class="form-label">Type</label>
-                        <input type="text" class="form-control" id="edit_type" required /> <!-- New field for type -->
-                    </div>
-                    <input type="hidden" id="edit_user_id" />
-                    <button type="submit" class="btn btn-primary">Save Changes</button>
-                </form>
+                </div>
             </div>
         </div>
-    </div>
-</div>
 
     </div>
 
@@ -138,129 +153,114 @@
                 event.preventDefault();
                 saveUser();
             });
-        });
 
-        function loadUsers() {
-    fetch("http://localhost:3000/admin/users")
-        .then((response) => response.json())
-        .then((data) => {
-            const usersTable = document
-                .getElementById("usersTable")
-                .getElementsByTagName("tbody")[0];
-            usersTable.innerHTML = "";
-            data.forEach((user) => {
-                const row = usersTable.insertRow();
-                row.innerHTML = `
-                    <td>${user.name}</td>
-                    <td>${user.username}</td>
-                    <td>${user.email}</td>
-                    <td>${user.contactnum}</td>
-                    <td>${user.latitude}</td>
-                    <td>${user.longitude}</td>
-                    <td><img src="${user.profilePic}" alt="Profile Picture" style="width: 50px; height: 50px;" /></td>
-                    <td>${user.type}</td> <!-- New column data -->
-                    <td>
-                        <button class="btn btn-warning btn-sm" onclick="editUser('${user.username}', '${user.name}', '${user.email}', '${user.contactnum}', ${user.latitude}, ${user.longitude}, '${user.profilePic}', '${user.type}')">Edit</button>
-                        <button class="btn btn-danger btn-sm" onclick="deleteUser('${user.username}')">Delete</button>
-                    </td>
-                `;
+            document.getElementById("searchInput").addEventListener("input", function () {
+                loadUsers(this.value);
             });
         });
-}
 
+        function loadUsers(query = "") {
+            fetch(`http://localhost:3000/admin/users?search=${encodeURIComponent(query)}`)
+                .then((response) => response.json())
+                .then((data) => {
+                    const usersTable = document
+                        .getElementById("usersTable")
+                        .getElementsByTagName("tbody")[0];
+                    usersTable.innerHTML = "";
+                    data.forEach((user) => {
+                        const row = usersTable.insertRow();
+                        row.innerHTML = `
+                            <td>${user.name}</td>
+                            <td>${user.username}</td>
+                            <td>${user.email}</td>
+                            <td>${user.contactnum}</td>
+                            <td>${user.latitude}</td>
+                            <td>${user.longitude}</td>
+                            <td><img src="${user.profilePic}" alt="Profile Picture" style="width: 50px; height: 50px;" /></td>
+                            <td>${user.type}</td>
+                            <td>
+                                <button class="btn btn-warning btn-sm" onclick="editUser('${user.username}', '${user.name}', '${user.email}', '${user.contactnum}', ${user.latitude}, ${user.longitude}, '${user.profilePic}', '${user.type}')">Edit</button>
+                                <button class="btn btn-danger btn-sm" onclick="deleteUser('${user.username}')">Delete</button>
+                            </td>
+                        `;
+                    });
+                });
+        }
 
-function addUser() {
-    const formData = {
-        name: document.getElementById("name").value,
-        username: document.getElementById("username").value,
-        email: document.getElementById("email").value,
-        contactnum: document.getElementById("contactnum").value,
-        latitude: document.getElementById("latitude").value,
-        longitude: document.getElementById("longitude").value,
-        profilePic: document.getElementById("profilePic").value,
-        type: document.getElementById("type").value // Add this line
-    };
+        function addUser() {
+            const formData = {
+                name: document.getElementById("name").value,
+                username: document.getElementById("username").value,
+                email: document.getElementById("email").value,
+                contactnum: document.getElementById("contactnum").value,
+                latitude: document.getElementById("latitude").value,
+                longitude: document.getElementById("longitude").value,
+                profilePic: document.getElementById("profilePic").value,
+                type: document.getElementById("type").value // Add this line
+            };
 
-    fetch("http://localhost:3000/admin/users", {
-        method: "POST",
-        headers: {
-            "Content-Type": "application/json",
-        },
-        body: JSON.stringify(formData),
-    })
-        .then((response) => response.json())
-        .then((data) => {
-            if (data.success) {
-                loadUsers();
-                document.getElementById("userForm").reset();
-            } else {
-                alert("Failed to add user");
-            }
-        });
-}
+            fetch("http://localhost:3000/admin/users", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify(formData),
+            })
+                .then((response) => response.json())
+                .then(() => {
+                    loadUsers();
+                    document.getElementById("userForm").reset();
+                });
+        }
 
+        function editUser(username, name, email, contactnum, latitude, longitude, profilePic, type) {
+            document.getElementById("edit_username").value = username;
+            document.getElementById("edit_name").value = name;
+            document.getElementById("edit_email").value = email;
+            document.getElementById("edit_contactnum").value = contactnum;
+            document.getElementById("edit_latitude").value = latitude;
+            document.getElementById("edit_longitude").value = longitude;
+            document.getElementById("edit_profilePic").value = profilePic;
+            document.getElementById("edit_type").value = type; // Add this line
+            document.getElementById("edit_user_id").value = username;
 
-function editUser(username, name, email, contactnum, latitude, longitude, profilePic, type) {
-    document.getElementById("edit_name").value = name;
-    document.getElementById("edit_email").value = email;
-    document.getElementById("edit_contactnum").value = contactnum;
-    document.getElementById("edit_latitude").value = latitude;
-    document.getElementById("edit_longitude").value = longitude;
-    document.getElementById("edit_profilePic").value = profilePic;
-    document.getElementById("edit_type").value = type; // Set the type field
-    document.getElementById("edit_user_id").value = username;
+            const modal = new bootstrap.Modal(document.getElementById("editUserModal"));
+            modal.show();
+        }
 
-    const editUserModal = new bootstrap.Modal(document.getElementById("editUserModal"));
-    editUserModal.show();
-}
+        function saveUser() {
+            const formData = {
+                name: document.getElementById("edit_name").value,
+                email: document.getElementById("edit_email").value,
+                contactnum: document.getElementById("edit_contactnum").value,
+                latitude: document.getElementById("edit_latitude").value,
+                longitude: document.getElementById("edit_longitude").value,
+                profilePic: document.getElementById("edit_profilePic").value,
+                type: document.getElementById("edit_type").value // Add this line
+            };
 
-
-function saveUser() {
-    const username = document.getElementById("edit_user_id").value;
-    const formData = {
-        name: document.getElementById("edit_name").value,
-        email: document.getElementById("edit_email").value,
-        contactnum: document.getElementById("edit_contactnum").value,
-        latitude: document.getElementById("edit_latitude").value,
-        longitude: document.getElementById("edit_longitude").value,
-        profilePic: document.getElementById("edit_profilePic").value,
-        type: document.getElementById("edit_type").value // Add this line for type
-    };
-
-    fetch(`http://localhost:3000/admin/users/${username}`, {
-        method: "PUT",
-        headers: {
-            "Content-Type": "application/json",
-        },
-        body: JSON.stringify(formData),
-    })
-        .then((response) => response.json())
-        .then((data) => {
-            if (data.success) {
-                loadUsers();
-                const editUserModal = bootstrap.Modal.getInstance(document.getElementById("editUserModal"));
-                editUserModal.hide();
-            } else {
-                alert("Failed to save user");
-            }
-        });
-}
-
+            fetch(`http://localhost:3000/admin/users/${document.getElementById("edit_user_id").value}`, {
+                method: "PUT",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify(formData),
+            })
+                .then((response) => response.json())
+                .then(() => {
+                    loadUsers();
+                    document.getElementById("editUserModal").querySelector(".btn-close").click();
+                });
+        }
 
         function deleteUser(username) {
-            if (confirm("Are you sure you want to delete this user?")) {
-                fetch(`http://localhost:3000/admin/users/${username}`, {
-                    method: "DELETE",
-                })
-                    .then((response) => response.json())
-                    .then((data) => {
-                        if (data.success) {
-                            loadUsers();
-                        } else {
-                            alert("Failed to delete user");
-                        }
-                    });
-            }
+            fetch(`http://localhost:3000/admin/users/${username}`, {
+                method: "DELETE",
+            })
+                .then((response) => response.json())
+                .then(() => {
+                    loadUsers();
+                });
         }
     </script>
 </body>
